# langchain-healthcare-tools

./: .env.example  .gitignore  AGENT_ARCHITECTURE.md  AI_COST_ANALYSIS.md  AI_DEVELOPMENT_PROCESS.md  BOUNTY.md  Dockerfile  INTERVIEW_CHEAT_SHEET.md  LICENSE  PRE_SEARCH.md  README.md  SUBMISSION_OVERVIEW.md  WEEKLY_DEVELOPMENT_LOG.md  pyproject.toml  start.sh
.github/workflows/: tests.yml
app/: __init__.py  config.py  database.py  main.py  observability.py  openemr_client.py
app/agent/: healthcare_agent.py  memory.py  prompts.py
app/api/: routes.py  watchlist_routes.py
app/openemr/: client.py
app/tools/: __init__.py  appointment_availability.py  drug_interaction.py  drug_recall.py  insurance_coverage.py  medication_lookup.py  provider_search.py  symptom_lookup.py  watchlist_sync.py
app/verification/: llm_judge.py  verifier.py
evals/: healthcare_eval_dataset.json  runner.py  test_cases.py
tests/: conftest.py  test_confidence_fallback.py  test_drug_recall.py  test_e2e_pipeline.py  test_llm_judge.py  test_memory.py  test_observability.py  test_openemr_live.py  test_routes.py  test_verifier.py  test_watchlist_routes.py  test_watchlist_sync.py
ui/: streamlit_app.py
